# TranscriptSim

./: .gitignore  LICENSE  README.md  setup.cfg
src/TranscriptSim/: DocSim_Function.py  DocSim_class.py  Save_Docs_As_txt.py
tests/: DocSimClass_Preprocessing_UnitTests.py  DocSim_Refactor_Test.py  __init__.py  average_similarity_unit_test.py  deleteme.py  doc_sim_unit_test.py  preprocessing_unit_tests.py  quick_test.py  text_extraction_test.py
