[metadata]
# replace with your username:
name = TranscriptSim
version = 0.0.3
author = Congxin (David) Xu
author_email = cx2rx@virginia.edu
description = Calculate Transcript Similarity Scores
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/congxinxu0116
project_urls =
    Bug Tracker = https://github.com/congxinxu0116
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src